Fix checkbox alignment in modal form

--- a/sencha-workspace/packages/slate-cbl/sass/src/view/modals/Modal.scss
+++ b/sencha-workspace/packages/slate-cbl/sass/src/view/modals/Modal.scss
@@ -2,4 +2,8 @@
     background-color: #e0e0e0;
     box-shadow: inset 0 1px 0 0 #ccc;
     padding: .5em 1em;
+
+    .x-form-cb {
+        margin-top: 9px;
+    }
 }
